--- a/code_alongs/06_sequences/lists.ipynb
+++ b/code_alongs/06_sequences/lists.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b62c88c0",
+   "metadata": {},
+   "source": [
+    "## bra att använda vid dynamiska värden. Till exempel en shoppinglista."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "3fbbcfc9",
