--- a/code_alongs/06_sequences/lists.ipynb
+++ b/code_alongs/06_sequences/lists.ipynb
@@ -5,7 +5,12 @@
    "id": "30fd8054",
    "metadata": {},
    "source": [
-    "# Lists"
+    "# Lists\n",
+    "- one of the collection data type/iterables\n",
+    "- used for storing several items in a variable\n",
+    "- for collection data type, we will be learning\n",
+    "    - characteristics\n",
+    "    - available operation"
    ]
   },
   {
