--- a/code_alongs/06_sequences/tuples.ipynb
+++ b/code_alongs/06_sequences/tuples.ipynb
@@ -13,7 +13,9 @@
    "id": "1349983d",
    "metadata": {},
    "source": [
-    "## bra att använda vid listor med värden som inte ska ändras. T.ex kordinater, RGB värden för färger osv. Statiska värden."
+    "## bra att använda vid listor med värden som inte ska ändras. T.ex kordinater, RGB värden för färger osv. Statiska värden.\n",
+    "- less flexible\n",
+    "- performs better"
    ]
   },
   {
